Bug 451054 - Systemsettings don't open after latest update
Summary: Systemsettings don't open after latest update
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.24.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-03-02 20:38 UTC by Marek
Modified: 2022-03-08 15:09 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.3
Sentry Crash Report:


Attachments
QT_DEBUG_PLUGINS=1 systemsettings > /tmp/debug.txt 2>&1 (148.92 KB, application/gzip)
2022-03-03 06:29 UTC, Marek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marek 2022-03-02 20:38:10 UTC
SUMMARY
Systemsettings doesn't work. When I tried to execute it from the terminal, I got:

$ systemsettings5
org.kde.systemsettings.app: System Settings was unable to load any views, and hence has nothing to display.
qt.qpa.wayland: Wayland does not support QWindow::requestActivate()
$ echo $?
0

$ systemsettings5 --list
The following modules are available:
kcm_about-distro               - Information About This System
kcm_access                     - Configure Accessibility Options
kcm_activities                 - Activities help you to focus on a specific task
kcm_autostart                  - Automatically Started Applications
kcm_baloofile                  - Configure File Search
kcm_bluetooth                  - Manage Bluetooth devices
kcm_cddb                       - Configure the CDDB Retrieval
kcm_clock                      - Date and Time
kcm_colord                     - Manage color correction of devices
kcm_colors                     - Choose colour scheme
kcm_componentchooser           - Choose default Applications
kcm_cookies                    - Configure the way cookies work
kcm_cursortheme                - Choose mouse cursor theme
kcm_desktoppaths               - Location for Personal Files
kcm_desktoptheme               - Choose Plasma style
kcm_device_automounter         - Configure automatic handling of removable storage media
kcm_energyinfo                 - Energy Consumption Statistics
kcm_feedback                   - Configure user feedback settings
kcm_filetypes                  - Configure file associations
kcm_fontinst                   - Install, manage and preview fonts
kcm_fonts                      - Configure user interface fonts
kcm_formats                    - Numeric, Currency and Time Formats
kcm_hotkeys                    - Configure Input Actions settings
kcm_icons                      - Choose icon theme
kcm_joystick                   - Calibrate Game Controller
kcm_kaccounts                  - Configure your internet accounts such as Google, Live, Owncloud
kcm_kamera                     - Configure Kamera
kcm_kdeconnect                 - Connect and sync your devices
kcm_kded                       - Configure background services
kcm_keyboard                   - Keyboard Hardware and Layout
kcm_keys                       - Configure Keyboard Shortcuts
kcm_kscreen                    - Manage and configure monitors and displays
kcm_kwallet5                   - KDE Wallet Configuration
kcm_kwin_effects               - Configure compositor settings for desktop effects
kcm_kwin_scripts               - Manage KWin scripts
kcm_kwin_virtualdesktops       - Configure navigation, number and layout of virtual desktops
kcm_kwindecoration             - Configure window titlebars and borders
kcm_kwinoptions                - Configure window actions and behaviour
kcm_kwinrules                  - Individual Window Behaviour
kcm_kwinscreenedges            - Configure active screen corners and edges
kcm_kwintabbox                 - Navigation Through Windows
kcm_kwintouchscreen            - Configure touch screen swipe gestures
kcm_landingpage                - Landing page with some basic settings
kcm_launchfeedback             - Application Launch Feedback
kcm_lookandfeel                - Choose global look and feel
kcm_mouse                      - Mouse Controls
kcm_netpref                    - Configure generic network preferences, like timeout values
kcm_networkmanagement          - Edit your Network Connections
kcm_nightcolor                 - Adjust colour temperature at night to reduce eye strain
kcm_notifications              - Event Notifications and Actions
kcm_plasmasearch               - Configure search settings
kcm_powerdevilactivitiesconfig - Per-Activity Power Management
kcm_powerdevilglobalconfig     - Advanced Power Management Settings
kcm_powerdevilprofilesconfig   - Energy Saving
kcm_printer_manager            - Configure your printers
kcm_proxy                      - Configure the proxy servers used
kcm_pulseaudio                 - Configure audio devices and volume
kcm_qtquicksettings            - No description available
kcm_screenlocker               - Configure screen locking
kcm_sddm                       - Configure Login Manager
kcm_smb                        - Credentials used to access SMB shares
kcm_smserver                   - Desktop Session Login and Logout
kcm_solid_actions              - Manage actions available to the user when connecting new devices
kcm_splashscreen               - Choose splash screen theme
kcm_ssl                        - SSL Versions and Certificates
kcm_style                      - Configure application style and behaviour
kcm_systemd                    - Configure the systemd daemon
kcm_tablet                     - No description available
kcm_touchpad                   - Touchpad settings
kcm_translations               - Change workspace and application languages
kcm_updates                    - Configure software update behaviour
kcm_users                      - Manage user accounts
kcm_virtualkeyboard            - Select which virtual keyboard to use
kcm_webshortcuts               - Configure web search keywords
kcm_workspace                  - Configure general workspace behaviour
kcmspellchecking               - Spell Checker Dictionaries and Options
kwincompositing                - Compositor Settings for Desktop Effects

$ systemsettings5 kcm_screenlocker
org.kde.systemsettings.app: System Settings was unable to load any views, and hence has nothing to display.
qt.qpa.wayland: Wayland does not support QWindow::requestActivate()

$ locate kcm_screenlocker
/usr/lib64/qt5/plugins/kcms/kcm_screenlocker.so
...
$ rpm -qf /usr/lib64/qt5/plugins/kcms/kcm_screenlocker.so
kscreenlocker-5.24.2-1.fc35.x86_64
$ rpm -qV kscreenlocker-5.24.2-1.fc35.x86_64; echo $?
0

--> this happens with all the modules :-(

STEPS TO REPRODUCE
1. run systemsettings5
2. 
3. 

OBSERVED RESULT
App doesn't work.

EXPECTED RESULT
App works.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 5.24.2-1.fc35 (Fedora 35 x86_64) 
(available in About System)
KDE Plasma Version: 5.24.2
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.2
Kernel Version: 5.16.11-200.fc35.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 4 × AMD Ryzen 3 3200G with Radeon Vega Graphics
Memory: 13.6 GiB of RAM
Graphics Processor: AMD Radeon Vega 8 Graphics

ADDITIONAL INFORMATION
$ rpm -qa \*plasma\*
plasma-applet-redshift-control-1.0.18-10.fc34.noarch
kde-settings-plasma-35.0-1.fc35.noarch
plasma-breeze-common-5.24.2-1.fc35.noarch
kf5-plasma-5.91.0-1.fc35.x86_64
plasma-nm-5.24.2-1.fc35.x86_64
plasma-discover-libs-5.24.2.1-1.fc35.x86_64
plasma-discover-flatpak-5.24.2.1-1.fc35.x86_64
plasma-discover-offline-updates-5.24.2.1-1.fc35.x86_64
plasma-discover-5.24.2.1-1.fc35.x86_64
plasma-discover-packagekit-5.24.2.1-1.fc35.x86_64
plasma-browser-integration-5.24.2-1.fc35.x86_64
plasma-systemsettings-5.24.2-1.fc35.x86_64
plasma-breeze-5.24.2-1.fc35.x86_64
plasma-milou-5.24.2-1.fc35.x86_64
plasma-pa-5.24.2-1.fc35.x86_64
plasma-integration-5.24.2-1.fc35.x86_64
plasma-desktop-5.24.2-1.fc35.x86_64
plasma-vault-5.24.2-1.fc35.x86_64
kdeplasma-addons-5.24.2-1.fc35.x86_64
plasma-discover-notifier-5.24.2.1-1.fc35.x86_64
plasma-nm-l2tp-5.24.2-1.fc35.x86_64
plasma-nm-openconnect-5.24.2-1.fc35.x86_64
plasma-nm-openswan-5.24.2-1.fc35.x86_64
plasma-nm-openvpn-5.24.2-1.fc35.x86_64
plasma-nm-pptp-5.24.2-1.fc35.x86_64
plasma-nm-vpnc-5.24.2-1.fc35.x86_64
plasma-disks-5.24.2-1.fc35.x86_64
plasma-drkonqi-5.24.2-1.fc35.x86_64
plasma-desktop-doc-5.24.2-1.fc35.noarch
plasma-workspace-common-5.24.2-2.fc35.x86_64
plasma-workspace-libs-5.24.2-2.fc35.x86_64
plasma-workspace-geolocation-5.24.2-2.fc35.x86_64
plasma-workspace-geolocation-libs-5.24.2-2.fc35.x86_64
plasma-lookandfeel-fedora-5.24.2-2.fc35.noarch
plasma-workspace-wayland-5.24.2-2.fc35.x86_64
plasma-workspace-x11-5.24.2-2.fc35.x86_64
plasma-workspace-5.24.2-2.fc35.x86_64
Comment 1 Marek 2022-03-02 20:44:56 UTC
I found this post with the same problem (one of their problems..): https://forum.artixlinux.org/index.php/topic,3747.msg0.html 
A "solution" proposed there is to install amd-ucode package, which doesn't exist for Fedora (at least not with "amd" in the name). I'm doubtful as why processor microcode package should affect systemsettings5...
Comment 2 David Edmundson 2022-03-02 22:22:35 UTC
>org.kde.systemsettings.app: System Settings was unable to load any views, and hence has nothing to display.

It's saying it can't find any plugins, even the fallback. That's a setup issue.

QT_DEBUG_PLUGINS=1 systemsettings might help you.
Comment 3 Marek 2022-03-03 06:29:28 UTC
Created attachment 147252 [details]
QT_DEBUG_PLUGINS=1 systemsettings > /tmp/debug.txt 2>&1

The output looks OK to me. Still no indication why the plugins are not loaded.
Comment 4 mwc85.23yp 2022-03-07 14:52:28 UTC
Running into this problem. Very frustrating.
Comment 5 mwc85.23yp 2022-03-08 00:59:09 UTC
Debug info looks fine. This problem started when 5.23 became 5.24.
Comment 6 Bug Janitor Service 2022-03-08 01:24:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/131
Comment 7 Fushan Wen 2022-03-08 01:26:08 UTC
Did you use sidebar mode or icon view mode?
Can you find `systemsettings_sidebar_mode.so` and `icon_mode.so` in /usr folder?
Comment 8 Fushan Wen 2022-03-08 02:31:44 UTC
I saw the two so files in your debug log, so my fix is not likely to resolve the bug. 

Please try the fix in the MR or wait unitl 5.24.3 is released to see if the bug is fixed.
Comment 9 Fushan Wen 2022-03-08 03:45:12 UTC
Git commit 7d6bfd805969fae35a6435f83a3805b3cc525545 by Fushan Wen.
Committed on 08/03/2022 at 02:18.
Pushed by ngraham into branch 'master'.

app/SettingsBase: Fix systemsettings unable to start when missing plugin

Switch to alternate view if the current view is missing on startup.
FIXED-IN: 5.24.3

M  +17   -3    app/SettingsBase.cpp

https://invent.kde.org/plasma/systemsettings/commit/7d6bfd805969fae35a6435f83a3805b3cc525545
Comment 10 Nate Graham 2022-03-08 03:46:27 UTC
Git commit d2a77e1c0ae5068e3ff1acf8056f05b7fa66cf61 by Nate Graham, on behalf of Fushan Wen.
Committed on 08/03/2022 at 03:46.
Pushed by ngraham into branch 'Plasma/5.24'.

app/SettingsBase: Fix systemsettings unable to start when missing plugin

Switch to alternate view if the current view is missing on startup.
FIXED-IN: 5.24.3


(cherry picked from commit 7d6bfd805969fae35a6435f83a3805b3cc525545)

M  +17   -3    app/SettingsBase.cpp

https://invent.kde.org/plasma/systemsettings/commit/d2a77e1c0ae5068e3ff1acf8056f05b7fa66cf61
Comment 11 Marek 2022-03-08 08:40:26 UTC
I created a new user, logged into Plasma and systemsettings worked. Then I fixed my installation with

 rm .config/systemsettingsrc .config/kde.org/systemsettings.conf

Logged out & in again, systemsettings now open.
Comment 12 mwc85.23yp 2022-03-08 15:09:34 UTC
 rm .config/systemsettingsrc .config/kde.org/systemsettings.conf

Fixed my problem. Thanks so much.