app/SettingsBase: Fix systemsettings unable to start when missing plugin

Switch to alternate view if the current view is missing on startup.

BUG: 451054
FIXED-IN: 5.24.3